<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context="com.tolgaduran.androidudacitysinglescreenapp.MainActivity">

    <ImageView
        android:contentDescription="@string/image_desc"
        android:layout_width="wrap_content"
        android:src="@drawable/coffee"
        android:scaleType="centerCrop"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/business_name"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/info"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/website"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/hours"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="24sp"/>

    <Button
        android:layout_width="match_parent"
        android:text="@string/email"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="24sp"/>
</LinearLayout>
